# worm-cyoa-v6-fork

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTES.md  README.md  UPDATE_THE_PROJECT.bat  balance.yaml  build.py  build.yaml  clean.sh  cyoa.sh  format.py  gold_morning.style.yaml  lightmode.sh  make.sh  network.py  points.py  powers-v17.csv  project-v17.json  pyproject.toml  requirements.md  xenon.json
.github/workflows/: build-viewer.yml  ftp-deploy.yml  page-deploy.yml  pages-deploy.yml
cyoa/: README.md  build.md  build.py  images.py  patch.py  refactor.md  text_export.md
cyoa/graph/: lib.py
cyoa/ops/: common.py  layout.py  md_export.py  media.py  objects.py  patch_loader.py  project.py  rows.py  sort.py
cyoa/patch/: __init__.py  schema copy.json  schema.json  schema.py
cyoa/sort/: __init__.py
cyoa/tools/: build.py  client.py  graph_tools.py  lib.py  md_tools.py  media_tools.py  merge_tools.py  meta.py  object_tools.py  patch.py  project_tools.py  row_tools.py  sort.py  style_tools.py  wiki_tools.py
images/v17/: obj-pz3p.avif
tauri/: .gitignore  package.json
tauri/src-tauri/: tauri.conf.json
tauri/static/: 404.html  export.html  images
viewer/: 200.html  index.html  project.json
viewer-beta/: index.html  project.json
viewer-beta/js/: chunk-vendors.59af3576.js
viewer-old/css/: app.df7ca14c.css  custom.css
viewer-old/js/: app.c533aa25.js
viewer-old/viewer/: index.html
viewer-v2/: 200.html  404.html  index.html
viewer-v2/assets/: 20Ay2QfE.js  Bahg8Ly-.js  BbOSqh4N.js  Bnl1HdVh.js  C82grF4w.js  CxaxnrFm.js  DZ4tQk2R.js  DbvWMPtW.js  index.BrcIvx_b.css
viewer-v2/css/: chunk-vendors.58637379.css  loading.css
viewer-v2/js/: app.c533aa25.js  chunk-vendors.59af3576.js  html-to-image.min.js
viewer/assets/: -7kvzNcK.js  -7uxxlVO.js  -Fk2hMBa.js  -Rz7svEa.js  -TZGpJrk.js  -WNw8ZyG.js  -en613jl.js  -ieLGjNT.js  -it0ZQ2l.js  -pJUMG14.js  -v8K-QF4.js  -zRiUVs9.js  0-fjJFW7.js  0cVxvwXm.js  0dcBM-VB.js  0jTTVUYa.js  1-2l3siO.js  16yjt_NE.js  1ClrFrJ3.js  1P7KRGzg.js  (+2231 more)
(+73 files in other folders)
