[project]
name = "worm-cyoa-v6-fork"
version = "1.0.0"
description = "Worm Interactive CYOA"
authors = [{ name = "Laureline David", email = "ltouroumov@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "rich",
    "pillow",
    "humanize",
    "lenses",
    "requests",
    "asciidag",
    "jinja2",
    "jsonschema",
    "jsonpath-ng (>=1.7.0,<2.0.0)",
]

[tool.ruff]
indent-width = 2

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
