[project]
name = "iccng-cli"
version = "1.0.0"
description = "Worm Interactive CYOA"
authors = [{ name = "Laureline David", email = "ltouroumov@gmail.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "rich",
    "pillow",
    "humanize",
    "lenses",
    "requests",
    "asciidag",
    "jinja2",
    "jsonschema",
    "jsonpath-ng (>=1.7.0,<2.0.0)",
    "pyyaml>=6.0.2",
]

[project.scripts]
cyoa = "cyoa.tools.client:main"

[tool.ruff]
indent-width = 2

[tool.uv]

[tool.hatch.build.targets.wheel]
packages = ["cyoa"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
